--- a/client/src/components/Dashboard/DashbordCards/dashboard_cards_item.scss
+++ b/client/src/components/Dashboard/DashbordCards/dashboard_cards_item.scss
@@ -9,7 +9,7 @@
     color: $text_color;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 20px;
     -webkit-box-shadow: 0px -1px 5px 0px rgba(153, 129, 100, 1);
@@ -19,7 +19,7 @@
     span {
         display: flex;
         width: 90%;
-        height: 40%;
+        height: 30%;
         font-size: 1.5vw
     }
 
@@ -34,14 +34,14 @@
         opacity: 0.8;
         border: 0.5px solid white;
         border-radius: 2px;
-        height: 15px;
+        height: 20px;
         outline: 0;
     }
 
     .dashboard__cards__item__btn {
         height: 15px;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
     }
 }
 
@@ -49,9 +49,13 @@
     transform: scale(1.1);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .dashboard__cards__item {
         width: 70vw;
         height: 30vh;
+
+        span {
+            font-size: 4.5vw;
+        }
     }
 }
