--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -15,15 +15,22 @@
 
 .toogle_btn {
   position: absolute;
-  top: 85px;
-  left: 15px;
+  top: 120px;
+  left: 10px;
   background: transparent;
   display: none;
+  border: none;
+  outline: 0;
+
 }
 
-@media (max-width: 1281px) {
+@media (max-width: 600px) {
   .toogle_btn {
     display: block;
     z-index: 5;
+  }
+
+  .wrapper {
+    height: 1200px;
   }
 }
