--- a/client/src/components/Dashboard/dashboard.scss
+++ b/client/src/components/Dashboard/dashboard.scss
@@ -34,7 +34,7 @@
     .dashboard_cards {
         flex-direction: column;
         align-items: space-between;
-        height: 800px;
+        height: 80%;
     }
 
 }
