--- a/client/src/components/Sidebar/sidebar.scss
+++ b/client/src/components/Sidebar/sidebar.scss
@@ -13,9 +13,10 @@
 
 @media (max-width: 600px) {
     .sidebar {
-        visibility: hidden;
-        width: 0;
-        transition: all 300ms ease-in-out;
+        transform: translateX(-100%);
+        transition: opacity 1s ease-in-out;
+        display: none;
+        opacity: 0;
 
         .dailyInfo {
             width: 0;
@@ -23,8 +24,8 @@
     }
 
     .sidebar__mobile {
-        visibility: visible;
         width: 100vw;
+        opacity: 1;
         display: flex;
         justify-content: flex-start;
         background: $main_color;
@@ -34,7 +35,10 @@
         top: 10%;
         font-size: 10vw;
         z-index: 4;
-        transition: all 300ms ease-in-out;
+        transform: translateX(0);
+        transition-duration: 1s;
+
+        transition: opacity 1s ease-in-out;
 
     }
 
